# lang_quiz

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  conftest.py  manage.py  package-lock.json  package.json  pytest.ini  requirements.txt  setup.cfg  structure.txt
docs/: README.md  TODO.md  development.md
docs/api/: endpoints.md
lang_quiz/: asgi.py  settings.py  urls.py  wsgi.py
quiz_builder/: apps.py  forms.py  models.py  parsers.py  structure.txt  tests.py  urls.py  views.py
quiz_builder/migrations/: 0001_initial.py
quiz_builder/static/scss/: _overrides.scss  _variables.scss  main.scss
quiz_builder/static/scss/components/: _forms.scss  _tests.scss
quiz_builder/templates/: base.html
quiz_builder/templates/tests/: create_test.html  home.html  preview_test.html  test_results.html
quiz_builder/templates/tests/partials/: _choice_test.html  _choice_with_gaps.html  _gap_test.html
quiz_builder/templatetags/: quiz_filters.py
