[metadata]
name = language-quiz-platform
version = 0.1.0
author = Karolina Wilk
author_email = karolina.wilk@artrek.com.pl
description = Platform for creating and managing language learning tests
long_description = file: README.md
long_description_content_type = text/markdown
# TODO github username
url = https://github.com/username/lang_quiz
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    Django>=4.2.0
    python-dateutil>=2.8.2
    pytz>=2023.3
    sqlparse>=0.4.4

[flake8]
     max-line-length = 100
     exclude = .git,__pycache__,build,dist
     per-file-ignores =
         # Ignore missing docstrings in tests
         test_*.py: D1